--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ body{
     font-family: "Satoshi", sans-serif;
     transition: all 0.3s ease-in-out;
     background-color: var(--background-color);
-    color: var(--color);
+    color: #b3b3b3;
     border-color: var(--border);
+
 }
 
