--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     src: url(./assets/Satoshi-Variable.woff2);
 }
 
-h1,h2,h3,h4,h5,h6,h7 {
+h1,h2,h3,h4,h5,h6{
     font-family: "JetBrains Mono", monospace;
 }
 body[data-theme="light"]{
